ATLAS-2060: Adjust Tests for backend